<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="search_label">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="media_label">Медиатека</string>
    <string name="settings_label">Настройки</string>
    <string name="settings_theme_label">Темная тема</string>
    <string name="settings_share_label">Поделиться приложением</string>
    <string name="settings_support_label">Написать в поддержку</string>
    <string name="settings_user_agreement_label">Пользовательское соглашение</string>
    <string name="share_url">https://praktikum.yandex.ru/learn/android-developer</string>
    <string name="share_learn_android_text">Изучай Android-разработку тут:</string>
    <string name="share_subject">Курс по Android-разработке</string>
    <string name="share_by_text">Поделиться через:</string>
    <string name="share_with">Отправить через</string>
    <string name="support_email">khazzenberg@vk.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_to">mailto:</string>
    <string name="time">2:55</string>
    <string name="track_name">Yesterday (Remaster 2009)</string>
    <string name="track_artist">The Beatles</string>
    <string name="album">Альбом</string>
    <string name="time_current">0:30</string>
    <string name="time_name">Длительность</string>
    <string name="country">Страна</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="time_track">5:35</string>
    <string name="year_track">1965</string>
    <string name="genre_track">Rock</string>
    <string name="country_track">Великобритания</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="try_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_name">Любимые треки</string>
    <string name="tracks_count">100 треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_create_pl">Завершить создание плейлиста?</string>
    <string name="finish_create_pl_msg">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="name_playlist">Best songs 2021</string>
    <string name="year_playlist">2022</string>
    <string name="time_playlist">300 минут</string>
    <string name="track_in_playlist">98 треков</string>
    <string name="empty_playlist_card">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="would_you_delete_track">Хотите удалить трек?</string>
    <string name="would_you_delete_playlist">Хотите удалить плейлист</string>
    <string name="yes_message">Да</string>
    <string name="no_message">Нет</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete_playlist_header">Удалить плейлист</string>
    <string name="delete_pl_descr">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_mes">Удалить</string>
    <string name="empty_playlist_mes">В этом плейлисте нет треков</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>