<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_panel_height">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">
            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/main_title"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"/>
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/search"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/search_label"
        app:icon="@drawable/ic_search_24"
        />

    <Button
        android:id="@+id/media"
        style="@style/MainMenuButtonStyle"
        android:text="@string/media_label"
        app:icon="@drawable/ic_media_library_24"
        />

    <Button
        android:id="@+id/settings"
        style="@style/MainMenuButtonStyle"
        android:layout_marginBottom="28dp"
        android:text="@string/settings_label"
        app:icon="@drawable/ic_settings_24"
        />

</LinearLayout>