<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back"
        app:title="@string/settings_label"
        style="@style/ToolbarStyle"/>

    <LinearLayout
        style="@style/SettingsListLinearLayoutStyle"
        android:layout_marginTop="24dp">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_theme_label"
            android:textAppearance="@style/TitleTextStyle"
            android:paddingVertical="0dp"
            android:paddingEnd="15dp"
            android:checked="true"
            android:contentDescription="@string/settings_theme_label"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/shareBlock"
        style="@style/SettingsListLinearLayoutStyle">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_share_label" />

        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_share_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supportBlock"
        style="@style/SettingsListLinearLayoutStyle">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_support_label" />
        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_support_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userAgreementBlock"
        style="@style/SettingsListLinearLayoutStyle">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_user_agreement_label" />
        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_arrow_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>