<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_panel_height">

        <Button
            android:id="@+id/back"
            style="@style/HeaderButtonStyle"
            app:icon="@drawable/ic_back_arrow_24"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_marginStart="@dimen/header_panel_title_margin_start"
                android:layout_marginTop="@dimen/header_panel_title_margin_top"
                android:text="@string/settings_label" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsListLinearLayoutStyle"
        android:layout_marginTop="24dp">
        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsListTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_theme_label"
            android:textAppearance="@style/TitleTextStyle"
            android:paddingVertical="0dp"
            android:paddingEnd="15dp"
            android:checked="true"
            android:contentDescription="@string/settings_theme_label"/>
    </LinearLayout>


    <LinearLayout
        style="@style/SettingsListLinearLayoutStyle"
        android:orientation="horizontal">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_share_label" />

        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                android:src="@drawable/ic_share_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsListLinearLayoutStyle"
        android:orientation="horizontal">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_support_label" />
        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                android:src="@drawable/ic_support_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsListLinearLayoutStyle"
        android:orientation="horizontal">
        <TextView
            style="@style/SettingsListTextViewStyle"
            android:text="@string/settings_user_agreement_label" />
        <LinearLayout
            style="@style/SettingsIconLayoutStyle">
            <ImageView
                android:src="@drawable/ic_arrow_24"
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>